workshop7/solutions/2_italy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: italy
  namespace: default
  labels:
    app: italy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: italy
  template:
    metadata:
      labels:
        app: italy
    spec:
      containers:
      - name: italy
        image: italy:1.0
        ports:
        - containerPort: 8080 #which port is exposed OUTSIDE the container
        resources: {}
