workshop7/solutions/2_italy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: italy
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: italy #does this need to be modified?
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
