workshop7/solutions/2_spain_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spain
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: spain #does this need to be modified?
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
