workshop7/solutions/2_ingress_hostheaders.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: combined
spec:
  rules:
  - host: mygolangapp.spain #Add host header here
    http:
      paths:
      - path: /
        backend:
          serviceName: spain
          servicePort: 8080
  - host: mygolangapp.italy #Add host header here
    http:
      paths:
      - path: /
        backend:
          serviceName: italy
          servicePort: 8080
