workshop7/solutions/3_tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: combined
spec:
  tls:
    - hosts: 
      - mygolangapp.cloud
      secretName: tls-secret
  rules:
  - host: mygolangapp.cloud #Add host header here
    http:
      paths:
      - path: /web_spain
        backend:
          serviceName: spain
          servicePort: 8080
      - path: /web_italy
        backend:
          serviceName: italy
          servicePort: 8080
